--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "a_crowd-funding",
+  "name": "crowd-funding",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,9 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@next/font": "13.1.6",
-    "next": "13.1.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "babel-plugin-styled-components": "^2.0.6",
+    "dotenv": "^16.0.3",
+    "ipfs-http-client": "^60.0.0",
+    "next": "12.1.0",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "react-loader-spinner": "^6.0.0-0",
+    "react-toastify": "^8.2.0",
+    "styled-components": "^5.3.3"
+  },
+  "devDependencies": {
+    "@nomiclabs/hardhat-waffle": "^2.0.5",
+    "ethereum-waffle": "^4.0.9",
+    "hardhat": "^2.12.7"
   }
 }
